src/objects/APTaskTemplate__c.object
<CustomObject>
    <description>Action Plan Task detail</description>
    <fields>
        <fullName>APTaskTemplate__c</fullName>
        <label>Task Dependency</label>
        <referenceTo>APTaskTemplate__c</referenceTo>
        <relationshipLabel>AP Tasks</relationshipLabel>
        <relationshipName>R00NR0000000VcWbMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <referenceTo>ActionPlan__c</referenceTo>
        <relationshipName>R00NR0000000VccFMAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaysFromStart__c</fullName>
        <label>Days</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes_Reminder__c</fullName>
        <label>Minutes Reminder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send Email Notification of Task creation.</description>
        <label>SendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on someone else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Reminder__c</fullName>
        <formula>IF(Reminder__c ,IF(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(Minutes_Reminder__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(Minutes_Reminder__c) ,60)))+&apos; &apos;+ IF( VALUE(Minutes_Reminder__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NR0000000Vd7NMAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>taskIndex__c</fullName>
        <label>taskIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AP Task</label>
    <nameField>
        <label>APTaskTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DaysGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>DaysFromStart__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>DaysFromStart__c</errorDisplayField>
        <errorMessage>You must enter a positive value</errorMessage>
    </validationRules>
</CustomObject>